Added cycle function

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ code/Arduino/__vm/.Arduino.vsarduino.h
 code/Arduino/__vm/Compile.vmps.xml
 code/Arduino/__vm/Configuration.Debug.vmps.xml
 code/Arduino/.vs/SkyeTracker/v14/.suo
+code/Arduino/__vm/Upload.vmps.xml
