Prep to support no pot actuator
LinearActuator has the virtual methods that a concrete class should
implement

--- a/code/Arduino/SkyeTracker.vcxproj.filters
+++ b/code/Arduino/SkyeTracker.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="ConfigTransfer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LinearActuatorBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinearActuator.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ConfigTransfer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinearActuatorBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="__vm\.Arduino.vsarduino.h">
