Completed tracker setup, moved strings to eeprom

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ code/Netduino/Core/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f722
 code/Netduino/Core/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 code/Netduino/Core/obj/Debug/Core.dll
 code/Netduino/Core/obj/Debug/Core.csproj.FileListAbsolute.txt
+code/Arduino/__vm/Configuration.Release.vmps.xml
