--- a/code/Arduino/SkyeTracker.vcxproj.filters
+++ b/code/Arduino/SkyeTracker.vcxproj.filters
@@ -18,9 +18,6 @@
     <None Include="SkyeTracker.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="LinearActuator.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Sun.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -30,17 +27,14 @@
     <ClCompile Include="Tracker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ConfigTransfer.cpp">
+    <ClCompile Include="LinearActuatorWithPotentiometer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LinearActuatorBase.cpp">
+    <ClCompile Include="LinearActuatorNoPot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinearActuator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Sun.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -56,10 +50,10 @@
     <ClInclude Include="Position.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ConfigTransfer.h">
+    <ClInclude Include="LinearActuatorWithPotentiometer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="LinearActuatorBase.h">
+    <ClInclude Include="LinearActuatorNoPot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="__vm\.Arduino.vsarduino.h">
