Added DateTimeTab, fixed support for southern hemisphere

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ bin/
 obj/
 __vm/
 .vs/
+code/Android/app/src/debug/res/values/google_maps_api.xml
+code/Android/app/src/debug/res/values/google_maps_api.xml
