Added call to google time zone api on location selection

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ __vm/
 .vs/
 code/Android/app/src/debug/res/values/google_maps_api.xml
 code/Android/app/src/debug/res/values/google_maps_api.xml
+code/Android/app/src/release/res/values/google_maps_api.xml
+code/Android/app/src/release/res/values/google_maps_api.xml
