--- a/code/Android/app/build.gradle
+++ b/code/Android/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.skye.skyetracker"
         minSdkVersion 16
-        targetSdkVersion 21
-        versionCode 224
-        versionName "2.2.4"
+        targetSdkVersion 28
+        versionCode 240
+        versionName "2.4.0"
     }
 
     signingConfigs {
@@ -32,11 +32,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:support-v13:21.0.3'
-    compile 'com.google.android.gms:play-services-maps:8.3.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.3.1'
+    implementation 'com.android.support:support-compat:28.+'
+    implementation 'com.android.support:appcompat-v7:28.+'
+    implementation 'com.android.support:support-v13:28.+'
+    implementation 'com.google.android.gms:play-services-maps:8.3.0'
 
 }
