Added Park & Protect MQTT commands

--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -33,5 +33,6 @@ build_flags =
     -D WIFI_STATUS_PIN=5
     -D WIFI_AP_PIN=0
     -D AP_TIMEOUT=30000
-    -D APP_LOG_LEVEL=ESP_LOG_INFO
+    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_ERROR
 
