--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -29,7 +29,17 @@ build_flags =
     -D PWMa_V=27
     -D ENABLE_V=26
     -D PWMb_V=25
+    ; The following variables correspond to the anemometer sold by Adafruit,
+    ; but could be modified to fit other anemometers.
     -D AnemometerPin=35
+    ; Mininum output voltage from anemometer in mV.
+    -D AnemometerVoltageMin=.4
+    ; Maximum output voltage from anemometer in mV.
+    -D AnemometerVoltageMax=2.0
+    ; Wind speed in meters/sec corresponding to minimum voltage
+    -D AnemometerWindSpeedMin=0
+    ; Wind speed in meters/sec corresponding to maximum voltage
+    -D AnemometerWindSpeedMax=32
     -D WIFI_STATUS_PIN=5
     -D WIFI_AP_PIN=0
     -D AP_TIMEOUT=30000
