add AnemometerWindSpeedProtection build flag

--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -36,10 +36,13 @@ build_flags =
     -D AnemometerVoltageMin=.4
     ; Maximum output voltage from anemometer in mV.
     -D AnemometerVoltageMax=2.0
-    ; Wind speed in meters/sec corresponding to minimum voltage
+    ; Wind speed in meters/sec corresponding to minimum voltage of anemometer.
     -D AnemometerWindSpeedMin=0
-    ; Wind speed in meters/sec corresponding to maximum voltage
+    ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
     -D AnemometerWindSpeedMax=32
+    ; Wind speed in km/hour where the array will move to a horizontal
+    ; position to avoid wind damage.
+    -D AnemometerWindSpeedProtection=28.8
     -D WIFI_STATUS_PIN=5
     -D WIFI_AP_PIN=0
     -D AP_TIMEOUT=30000
