move factory default settings to build_flags

--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -20,18 +20,33 @@ lib_deps =
   Thread
   AsyncMqttClient
   IotWebConf
-  
+
 build_flags =
-    -D MQTT_MAX_PACKET_SIZE=1024
+    -D DualAxisEnabled=true
+    -D AzimuthMin=90
+    -D AzimuthMax=270
+    -D ElevationMin=0
+    -D ElevationMax=90
+    ; Location
+    -D LocationLatitude=45.936527
+    -D LocationLongitude=-75.091259
+    ; Actuators
+    -D ActuatorHorizontalLength=12
+    -D ActuatorVerticalLength=8
+    -D ActuatorHorizontalSpeed=31
+    -D ActuatorVerticalSpeed=31
+    ; L295N Motor Controller
     -D PWMa_H=13
     -D ENABLE_H=12
     -D PWMb_H=14
     -D PWMa_V=27
     -D ENABLE_V=26
     -D PWMb_V=25
+    ; Anemometer
+    -D AnemometerEnabled=true
+    -D AnemometerPin=35
     ; The following variables correspond to the anemometer sold by Adafruit,
     ; but could be modified to fit other anemometers.
-    -D AnemometerPin=35
     ; Mininum output voltage from anemometer in mV.
     -D AnemometerVoltageMin=.4
     ; Maximum output voltage from anemometer in mV.
@@ -40,6 +55,9 @@ build_flags =
     -D AnemometerWindSpeedMin=0
     ; Wind speed in meters/sec corresponding to maximum voltage
     -D AnemometerWindSpeedMax=32
+    ; MQTT
+    -D MQTT_MAX_PACKET_SIZE=1024
+    ; WIFI
     -D WIFI_STATUS_PIN=5
     -D WIFI_AP_PIN=0
     -D AP_TIMEOUT=30000
