Moved factory defaults to #define

--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -22,20 +22,7 @@ lib_deps =
   IotWebConf
 
 build_flags =
-    -D DualAxisEnabled=true
-    -D AzimuthMin=90
-    -D AzimuthMax=270
-    -D ElevationMin=0
-    -D ElevationMax=90
-    ; Location
-    -D LocationLatitude=45.936527
-    -D LocationLongitude=-75.091259
-    ; Actuators
-    -D ActuatorHorizontalLength=12
-    -D ActuatorVerticalLength=8
-    -D ActuatorHorizontalSpeed=31
-    -D ActuatorVerticalSpeed=31
-    ; L295N Motor Controller
+    ; Motor Controller
     -D PWMa_H=13
     -D ENABLE_H=12
     -D PWMb_H=14
