move bluetooth device name to build_flags

--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -47,6 +47,8 @@ build_flags =
     -D AnemometerWindSpeedProtection=28.8
     ; MQTT
     -D MQTT_MAX_PACKET_SIZE=1024
+    ; Bluetooth
+    '-DBluetoothDeviceName="HC-06"'
     ; WIFI
     -D AP_TIMEOUT=30000
     -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
