--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ code/Android/app/src/debug/res/values/google_maps_api.xml
 code/Android/app/src/debug/res/values/google_maps_api.xml
 code/Android/app/src/release/res/values/google_maps_api.xml
 code/Android/app/src/release/res/values/google_maps_api.xml
+*.iml
