Update to trace stm

--- a/code/Arduino/SkyeTracker/platformio.ini
+++ b/code/Arduino/SkyeTracker/platformio.ini
@@ -8,13 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; uncomment for Arduino Nano
 [env:nanoatmega328]
-platform = atmelavr
 board = nanoatmega328
 
+; uncomment for Arduino UNO
 ; [env:uno]
-; platform = atmelavr
 ; board = uno
+
+platform = atmelavr
 framework = arduino
 monitor_speed = 9600
 
