Added support for ESPFlashTool

--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -50,7 +50,10 @@ build_flags =
     ; Bluetooth
     '-DBluetoothDeviceName="HC-06"'
     ; WIFI
+    -D WIFI_STATUS_PIN=2 ;LED Pin on the Dev board
+    -D WIFI_AP_PIN=15
+    -D FACTORY_RESET_PIN=4
     -D AP_TIMEOUT=30000
-    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-    ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_ERROR
+    ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_ERROR
 
