--- a/code/ESP32/SkyeTracker/platformio.ini
+++ b/code/ESP32/SkyeTracker/platformio.ini
@@ -53,9 +53,9 @@ build_flags =
     ; First it will light up (kept LOW), on Wifi connection it will blink,
     ; when connected to the Wifi it will turn off (kept HIGH).
     -D WIFI_STATUS_PIN=2
-    ; When WIFI_AP_PIN is pulled to ground on startup, SkyeTracker will use
-    ; the initial password to build an access point. (E.g. in case of lost
-    ; password).
+    ; If a push button on WIFI_AP_PIN is detected to be pressed at boot time,
+    ; SkyeTracker will use the initial password for accepting connections in
+    ; Access Point mode. This is usefull e.g. when custom password was lost.
     -D WIFI_AP_PIN=15
     ; Factory reset pin for SkyeTracker
     -D FACTORY_RESET_PIN=4
