--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ code/Android/app/src/release/res/values/google_maps_api.xml
 code/Android/app/src/release/res/values/google_maps_api.xml
 *.iml
 code/Android/app/app.iml
+*.dxf~
+*.iml
