Moved constants to platform.ini

--- a/code/Arduino/platformio.ini
+++ b/code/Arduino/platformio.ini
@@ -9,12 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 ; uncomment for Arduino Nano
-[env:nanoatmega328]
-board = nanoatmega328
+; [env:nanoatmega328]
+; board = nanoatmega328
 
 ; uncomment for Arduino UNO
-; [env:uno]
-; board = uno
+[env:uno]
+board = uno
 
 platform = atmelavr
 framework = arduino
@@ -28,5 +28,29 @@ lib_deps =
   SoftwareSerial
 
 build_flags =
-;   -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_WARN
-  -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+
+   ; Motor Controller
+    -D PWMa_H=PIN2
+    -D ENABLE_H=PIN7
+    -D PWMb_H=PIN3
+    -D PWMa_V=PIN4
+    -D ENABLE_V=PIN6
+    -D PWMb_V=PIN5
+
+    ; Anemometer
+    -D AnemometerPin=A3
+    ; The following variables correspond to the anemometer sold by Adafruit,
+    ; but could be modified to fit other anemometers.
+    ; Mininum output voltage from anemometer in mV.
+    -D AnemometerVoltageMin=.4
+    ; Maximum output voltage from anemometer in mV.
+    -D AnemometerVoltageMax=2.0
+    ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
+    -D AnemometerWindSpeedMax=32
+    ; Wind speed in km/hour where the array will move to a horizontal
+    ; position to avoid wind damage.
+    -D AnemometerWindSpeedProtection=28.8
+
+    ; logs
+    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_WARN
+    ;-D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
