--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
   IotWebConf
 
 build_flags =
+
     ; Motor Controller
     -D PWMa_H=13
     -D ENABLE_H=12
@@ -29,28 +30,23 @@ build_flags =
     -D PWMa_V=27
     -D ENABLE_V=26
     -D PWMb_V=25
+
     ; Anemometer
-    -D AnemometerEnabled=true
-    -D AnemometerPin=35
+    -D AnemometerPin=A0
     ; The following variables correspond to the anemometer sold by Adafruit,
     ; but could be modified to fit other anemometers.
     ; Mininum output voltage from anemometer in mV.
     -D AnemometerVoltageMin=.4
     ; Maximum output voltage from anemometer in mV.
     -D AnemometerVoltageMax=2.0
-    ; Wind speed in meters/sec corresponding to minimum voltage of anemometer.
-    -D AnemometerWindSpeedMin=0
     ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
     -D AnemometerWindSpeedMax=32
     ; Wind speed in km/hour where the array will move to a horizontal
     ; position to avoid wind damage.
     -D AnemometerWindSpeedProtection=28.8
-    ; MQTT
-    -D MQTT_MAX_PACKET_SIZE=1024
-    ; Bluetooth
-    '-DBluetoothDeviceName="HC-06"'
+
     ; WIFI
-    -D WIFI_STATUS_PIN=2 ;LED Pin on the Dev board
+    -D WIFI_STATUS_PIN=2 ; LED Pin on the Dev board
     -D WIFI_AP_PIN=15
     -D FACTORY_RESET_PIN=4
     -D AP_TIMEOUT=30000
