Only check wind speed when tracking

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -24,19 +24,19 @@ lib_deps =
 build_flags =
 
     ; Motor Controller
-    -D PWMa_H=13
-    -D ENABLE_H=12
-    -D PWMb_H=14
-    -D PWMa_V=27
-    -D ENABLE_V=26
-    -D PWMb_V=25
+    -D PWMa_H=GPIO_NUM_13
+    -D ENABLE_H=GPIO_NUM_12
+    -D PWMb_H=GPIO_NUM_14
+    -D PWMa_V=GPIO_NUM_27
+    -D ENABLE_V=GPIO_NUM_26
+    -D PWMb_V=GPIO_NUM_25
 
     ; Anemometer
     -D AnemometerPin=A0
     ; The following variables correspond to the anemometer sold by Adafruit,
     ; but could be modified to fit other anemometers.
     ; Mininum output voltage from anemometer in mV.
-    -D AnemometerVoltageMin=.4
+    -D AnemometerVoltageMin=.40
     ; Maximum output voltage from anemometer in mV.
     -D AnemometerVoltageMax=2.0
     ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
