Moved version and root topic to platform.ini

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -22,7 +22,8 @@ lib_deps =
   IotWebConf
 
 build_flags =
-
+    -D CONFIG_VERSION="V1.0.2" ; major.minor.build (major or minor will invalidate the configuration)
+    -D HOME_ASSISTANT_PREFIX="homeassistant" ; Home Assistant Auto discovery root topic
     ; Motor Controller
     -D PWMa_H=GPIO_NUM_13
     -D ENABLE_H=GPIO_NUM_12
