--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -22,9 +22,9 @@ lib_deps =
   IotWebConf
 
 build_flags =
-    '-D CONFIG_VERSION="V1.0.2"' ; major.minor.build (major or minor will invalidate the configuration)
-    '-D HOME_ASSISTANT_PREFIX="homeassistant"' ; Home Assistant Auto discovery root topic
-    '-D BluetoothDeviceName="HC-06"' ; name should be HC-06 to work with Play Store version of the Android App
+    -D 'CONFIG_VERSION="V1.0.2"' ; major.minor.build (major or minor will invalidate the configuration)
+    -D 'HOME_ASSISTANT_PREFIX="homeassistant"' ; Home Assistant Auto discovery root topic
+    -D 'BluetoothDeviceName="HC-06"' ; name should be HC-06 to work with Play Store version of the Android App
 
     ; Motor Controller
     -D PWMa_H=GPIO_NUM_13
