--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -44,20 +44,23 @@ build_flags =
     ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
     -D AnemometerWindSpeedMax=32
     ; Wind speed in km/hour where the array will move to a horizontal position to avoid wind damage.
-    -D AnemometerWindSpeedProtection=28.8 ; 8 meters per second
+    -D AnemometerWindSpeedProtection=28.8 ; in km/h, => 8 meters per second
 
     ; WIFI
     ; WIFI Status indicator pin. Uses LED Pin on the Dev board by default.
-    ; First it will light up (kept LOW), on Wifi connection it will blink,
-    ; when connected to the Wifi it will turn off (kept HIGH).
+    ;  - Rapid blinks - The device is in AP mode with default password.
+    ;  - Rapid blinks, but mostly on - AP mode, waiting for configuration changes.
+    ;  - Normal blinks - Connecting to WiFi.
+    ;  - Mostly off with rare rapid blinks - WiFi is connected performing normal operation.
     -D WIFI_STATUS_PIN=2
     ; If a push button on WIFI_AP_PIN is detected to be pressed at boot time,
     ; SkyeTracker will use the initial password for accepting connections in
     ; Access Point mode. This is usefull e.g. when custom password was lost.
     -D WIFI_AP_PIN=15
+
     ; Factory reset pin for SkyeTracker
     -D FACTORY_RESET_PIN=4 
-    -D AP_TIMEOUT=30000 
+    ; logs are sent over BT.
     ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_ERROR
 
