--- a/code/Android/app/build.gradle
+++ b/code/Android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
         applicationId "com.skye.skyetracker"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
     }
 
     signingConfigs {
@@ -32,9 +32,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.3.1'
-    implementation 'com.android.support:support-compat:28.+'
-    implementation 'com.android.support:appcompat-v7:28.+'
-    implementation 'com.android.support:support-v13:28.+'
+    implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:8.3.0'
 
 }
