--- a/code/Arduino/platformio.ini
+++ b/code/Arduino/platformio.ini
@@ -13,8 +13,12 @@
 ; board = nanoatmega328
 
 ; uncomment for Arduino UNO
+; [env:uno]
+; board = uno
+
+; uncomment for Arduino UNO
 [env:uno]
-board = uno
+board = nanoatmega328
 
 platform = atmelavr
 framework = arduino
