Fix IOTWebConf version to 2.3.1

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
   ArduinoJson
   Thread
   AsyncMqttClient
-  IotWebConf
+  IotWebConf@2.3.1
 
 build_flags =
     -D 'CONFIG_VERSION="V1.0.4"' ; major.minor.build (major or minor will invalidate the configuration)
