--- a/code/Android/app/src/main/AndroidManifest.xml
+++ b/code/Android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.skye.skyetracker"
-    android:versionCode="253"
-    android:versionName="2.5.3" >
+    android:versionCode="254"
+    android:versionName="2.5.4" >
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -17,7 +16,8 @@
         android:theme="@android:style/Theme.Holo">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
