--- a/code/Android/app/build.gradle
+++ b/code/Android/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.skye.skyetracker"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 33
     }
 
