--- a/code/Android/app/src/main/AndroidManifest.xml
+++ b/code/Android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="256"
-    android:versionName="2.5.6" >
+    android:versionCode="257"
+    android:versionName="2.5.7" >
 
     <uses-permission android:name="android.permission.BLUETOOTH"
         android:maxSdkVersion="30" />
@@ -12,6 +12,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN"
         android:minSdkVersion="31"/>
     <uses-feature android:name="android.hardware.bluetooth" android:required="true"/>
+
+    <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".MainApplication"
