Upgrade IOTWebConf to version 3+
Migrate to IotWebConf version 3.2

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -19,10 +19,10 @@ lib_deps =
   ArduinoJson
   Thread
   AsyncMqttClient
-  IotWebConf@2.3.1
+  IotWebConf
 
 build_flags =
-    -D 'CONFIG_VERSION="V1.0.6"' ; major.minor.build (major or minor will invalidate the configuration)
+    -D 'CONFIG_VERSION="V1.2.0"' ; major.minor.build (major or minor will invalidate the configuration)
     -D 'HOME_ASSISTANT_PREFIX="homeassistant"' ; Home Assistant Auto discovery root topic
     -D 'BluetoothDeviceName="HC-06"' ; name should be HC-06 to work with Play Store version of the Android App
 
@@ -62,5 +62,5 @@ build_flags =
     -D FACTORY_RESET_PIN=4 
     ; logs are sent over BT.
     ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_ERROR
+    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
 
