Set versions for dep libraries

--- a/code/Arduino/platformio.ini
+++ b/code/Arduino/platformio.ini
@@ -25,11 +25,11 @@ framework = arduino
 monitor_speed = 115200
 
 lib_deps =
-  ArduinoJson
-  RTCLib
-  ArduinoThread
+  ArduinoJson@ 6.19.4
+  RTCLib@ 1.4.1
+  ArduinoThread@ 2.1.1
   Wire
-  SoftwareSerial
+  SoftwareSerial@ 1.0
 
 build_flags =
 
