--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -16,10 +16,10 @@ monitor_speed = 115200
 board_build.partitions = min_spiffs.csv
 
 lib_deps =
-  ArduinoJson
-  Thread
-  AsyncMqttClient
-  IotWebConf
+  ArduinoJson@ ^7.0.4
+  ivanseidel/Thread
+  AsyncMqttClient@ ^0.9.0
+  IotWebConf@ ^3.2.1
 
 build_flags =
     -D 'CONFIG_VERSION="V1.2.0"' ; major.minor.build (major or minor will invalidate the configuration)
