--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -8,59 +8,161 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+src_dir = main
+include_dir = main/include
+
+[common]
+    lib_deps_external =
+        me-no-dev/AsyncTCP @ ^3.3.2
+        me-no-dev/ESPAsyncWebServer @ ^3.6.0
+        bblanchon/ArduinoJson @ ^7.3.0
+        ivanseidel/ArduinoThread @ ^2.1.1
+        miq19/eModbus @ ^1.7.4
+        adafruit/Adafruit ADS1X15 @ ^2.5.0
+
+    build_flags =
+        -std=gnu++17
+        -D 'APP_VERSION="V3.0.0"' ; major.minor.build (major or minor will invalidate the configuration)
+        -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+        ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
+        -D LOG_TO_SERIAL_PORT
+
+    build_unflags =
+        -std=gnu++11 
+
 [env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-board_build.partitions = min_spiffs.csv
+    platform = espressif32
+    board = esp32dev
+    framework = arduino
+    monitor_speed = 115200
 
-lib_deps =
-  ArduinoJson@ ^7.0.4
-  ivanseidel/Thread
-  AsyncMqttClient@ ^0.9.0
-  IotWebConf@ ^3.2.1
+    lib_deps =
+        ${common.lib_deps_external}
 
-build_flags =
-    -D 'CONFIG_VERSION="V1.2.0"' ; major.minor.build (major or minor will invalidate the configuration)
-    -D 'HOME_ASSISTANT_PREFIX="homeassistant"' ; Home Assistant Auto discovery root topic
-    -D 'BluetoothDeviceName="HC-06"' ; name should be HC-06 to work with Play Store version of the Android App
+    build_flags =
+        ${common.build_flags}
+        -D ESP_32Dev
 
-    ; Motor Controller
-    -D PWMa_H=GPIO_NUM_13
-    -D ENABLE_H=GPIO_NUM_12
-    -D PWMb_H=GPIO_NUM_14
-    -D PWMa_V=GPIO_NUM_27
-    -D ENABLE_V=GPIO_NUM_26
-    -D PWMb_V=GPIO_NUM_25
+    build_unflags =
+        ${common.build_unflags} 
 
-    ; Anemometer
-    -D AnemometerPin=A0
-    ; The following variables correspond to the anemometer sold by Adafruit, but could be modified to fit other anemometers.
-    ; Mininum output voltage from anemometer in mV.
-    -D AnemometerVoltageMin=.40
-    ; Maximum output voltage from anemometer in mV.
-    -D AnemometerVoltageMax=2.0
-    ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
-    -D AnemometerWindSpeedMax=32
-    ; Wind speed in km/hour where the array will move to a horizontal position to avoid wind damage.
-    -D AnemometerWindSpeedProtection=28.8 ; in km/h, => 8 meters per second
+[env:edgebox-esp-100]
+    platform = espressif32
+    board = edgebox-esp-100
+    framework = arduino
+    monitor_speed = 115200
 
-    ; WIFI
-    ; WIFI Status indicator pin. Uses LED Pin on the Dev board by default.
-    ;  - Rapid blinks - The device is in AP mode with default password.
-    ;  - Rapid blinks, but mostly on - AP mode, waiting for configuration changes.
-    ;  - Normal blinks - Connecting to WiFi.
-    ;  - Mostly off with rare rapid blinks - WiFi is connected performing normal operation.
-    -D WIFI_STATUS_PIN=2
-    ; If a push button on WIFI_AP_PIN is detected to be pressed at boot time,
-    ; SkyeTracker will use the initial password for accepting connections in
-    ; Access Point mode. This is usefull e.g. when custom password was lost.
-    -D WIFI_AP_PIN=15
+    lib_deps =
+        ${common.lib_deps_external}
+        adafruit/RTClib @ ^2.1.4
 
-    ; Factory reset pin for SkyeTracker
-    -D FACTORY_RESET_PIN=4 
-    ; logs are sent over BT.
-    ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
+    build_flags =
+        ${common.build_flags}
+        -D EDGEBOX
+        -D HasEthernet
+        -D HasRTC
+        -D HasMQTT
+        -D HasOTA
+        
+    ; -D LOG_SENSOR_VOLTAGE
+
+    build_unflags =
+        ${common.build_unflags} 
+        ; -D LOG_TO_SERIAL_PORT  ; comment to enable LED (edgeBox shares the LED pin with the serial TX gpio)
+
+[env:norvi-esp32dev]
+    platform = espressif32
+    board = esp32-norvi
+    framework = arduino
+    monitor_speed = 115200
+    lib_deps =
+        ${common.lib_deps_external}
+        adafruit/Adafruit GFX Library @ ^1.12.3
+        adafruit/Adafruit SSD1306 @ ^2.5.15
+        
+    build_flags =
+        ${common.build_flags}
+        -D NORVI_GSM_AE02
+        -D Has_OLED_Display 
+
+    build_unflags =
+        ${common.build_unflags} 
+
+[env:waveshare-esp32-s3-relay-6ch]
+    platform = espressif32
+    board = ws-esp32s3-relay
+    framework = arduino
+    monitor_speed = 115200
+
+    lib_deps =
+        ${common.lib_deps_external}
+
+    build_flags =
+        ${common.build_flags}
+        -D Waveshare_Relay_6CH
+        -D HasMQTT
+        -D HasOTA
+        -D LOG_TO_SERIAL_PORT
+        
+    build_unflags =
+        ${common.build_unflags} 
+
+[env:lilygo-esp32-relay-4ch]
+    platform = espressif32
+    board = lilygo-t-relay4
+    framework = arduino
+    monitor_speed = 115200
+
+    lib_deps =
+        ${common.lib_deps_external}
+        adafruit/Adafruit GFX Library @ ^1.12.3
+        adafruit/Adafruit SSD1306 @ ^2.5.15
+
+    build_flags =
+        ${common.build_flags}
+        -D Lilygo_Relay_4CH
+        -D Has_OLED_Display
+        -D HasOTA
+        -D LOG_TO_SERIAL_PORT
+        
+    build_unflags =
+        ${common.build_unflags} 
+
+    ; ; Motor Controller
+    ; -D PWMa_H=GPIO_NUM_13
+    ; -D ENABLE_H=GPIO_NUM_12
+    ; -D PWMb_H=GPIO_NUM_14
+    ; -D PWMa_V=GPIO_NUM_27
+    ; -D ENABLE_V=GPIO_NUM_26
+    ; -D PWMb_V=GPIO_NUM_25
+
+    ; ; Anemometer
+    ; -D AnemometerPin=A0
+    ; ; The following variables correspond to the anemometer sold by Adafruit, but could be modified to fit other anemometers.
+    ; ; Mininum output voltage from anemometer in mV.
+    ; -D AnemometerVoltageMin=.40
+    ; ; Maximum output voltage from anemometer in mV.
+    ; -D AnemometerVoltageMax=2.0
+    ; ; Wind speed in meters/sec corresponding to maximum voltage of anemometer.
+    ; -D AnemometerWindSpeedMax=32
+    ; ; Wind speed in km/hour where the array will move to a horizontal position to avoid wind damage.
+    ; -D AnemometerWindSpeedProtection=28.8 ; in km/h, => 8 meters per second
+
+    ; ; WIFI
+    ; ; WIFI Status indicator pin. Uses LED Pin on the Dev board by default.
+    ; ;  - Rapid blinks - The device is in AP mode with default password.
+    ; ;  - Rapid blinks, but mostly on - AP mode, waiting for configuration changes.
+    ; ;  - Normal blinks - Connecting to WiFi.
+    ; ;  - Mostly off with rare rapid blinks - WiFi is connected performing normal operation.
+    ; -D WIFI_STATUS_PIN=2
+    ; ; Factory reset pin for SkyeTracker
+    ; -D FACTORY_RESET_PIN=4 
+
+    ; ; logs
+    ; ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    ;  -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
+    ; -D IOTWEBCONF_DEBUG_TO_SERIAL
+    ; -D IOTWEBCONF_DEBUG_PWD_TO_SERIAL   
+
 
