Refactor settings handling and add relay 6CH support
Replaces form submission with JSON-based settings endpoint, updates IOT and Tracker interfaces to use JsonDocument, and adds Lilygo Relay 6CH hardware definitions. Removes legacy board config, updates web UI with controller buttons, and improves style for new controls. Also refactors configuration to use double for latitude/longitude and updates platformio.ini with new relay 6CH environment.

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -108,7 +108,7 @@ include_dir = main/include
     build_unflags =
         ${common.build_unflags} 
 
-[env:lilygo-esp32-relay-4ch]
+[env:lilygo-t-relay4]
     platform = espressif32
     board = lilygo-t-relay4
     framework = arduino
@@ -123,6 +123,28 @@ include_dir = main/include
         ${common.build_flags}
         -D Lilygo_Relay_4CH
         -D Has_OLED_Display
+        -D HasOTA
+        -D LOG_TO_SERIAL_PORT
+        
+    build_unflags =
+        ${common.build_unflags} 
+
+[env:lilygo-t-relay6-s3]
+    platform = espressif32
+    board = lilygo-t-relay6-s3
+    framework = arduino
+    monitor_speed = 115200
+
+    lib_deps =
+        ${common.lib_deps_external}
+        adafruit/Adafruit GFX Library @ ^1.12.3
+        adafruit/Adafruit SSD1306 @ ^2.5.15
+        simsso/ShiftRegister74HC595 @ ^1.3.1
+
+    build_flags =
+        ${common.build_flags}
+        -D Lilygo_Relay_6CH
+        ; -D Has_OLED_Display
         -D HasOTA
         -D LOG_TO_SERIAL_PORT
         
