--- a/code/ESP32/.vscode/settings.json
+++ b/code/ESP32/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
         "typeinfo": "cpp",
+        "optional": "cpp",
+        "system_error": "cpp",
+        "regex": "cpp",
+        "string": "cpp"
     }
 }
