Refactor settings handling and add RTC support
Reworked settings form submission and processing for network configuration, including unified JSON handling and improved web interface. Added RTC support for Lilygo_Relay_6CH, including time synchronization and factory reset via GPIO0. Removed obsolete form submission methods and streamlined state updates for WebSocket clients. Updated dependencies and configuration to support new features.

--- a/code/ESP32/.vscode/settings.json
+++ b/code/ESP32/.vscode/settings.json
@@ -52,6 +52,7 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "*.htm": "cpp"
     }
 }
