--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -18,8 +18,6 @@ include_dir = main/include
         me-no-dev/ESPAsyncWebServer @ ^3.6.0
         bblanchon/ArduinoJson @ ^7.3.0
         ivanseidel/ArduinoThread @ ^2.1.1
-        miq19/eModbus @ ^1.7.4
-        adafruit/Adafruit ADS1X15 @ ^2.5.0
 
     build_flags =
         -std=gnu++17
@@ -139,6 +137,7 @@ include_dir = main/include
         ${common.lib_deps_external}
         adafruit/Adafruit GFX Library @ ^1.12.3
         adafruit/Adafruit SSD1306 @ ^2.5.15
+        adafruit/RTClib @ ^2.1.4
         simsso/ShiftRegister74HC595 @ ^1.3.1
 
     build_flags =
@@ -146,6 +145,7 @@ include_dir = main/include
         -D Lilygo_Relay_6CH
         ; -D Has_OLED_Display
         -D HasOTA
+        -D HasRTC
         -D LOG_TO_SERIAL_PORT
         
     build_unflags =
