--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -78,7 +78,7 @@ include_dir = main/include
     build_flags =
         ${common.build_flags}
         -D Lilygo_Relay_4CH
-        -D Has_OLED_Display
+        -D Has_OLED
         -D HasOTA
         -D LOG_TO_SERIAL_PORT
         
@@ -101,7 +101,7 @@ include_dir = main/include
     build_flags =
         ${common.build_flags}
         -D Lilygo_Relay_6CH
-        ; -D Has_OLED_Display
+        ; -D Has_OLED
         -D HasOTA
         -D HasRTC
         -D LOG_TO_SERIAL_PORT
