Refactor web assets and settings handling for ESP32
Moved HTML, CSS, and JS assets from main/include to data directory and updated code to serve them from the new location. Replaced legacy settings endpoints and logic with separate /iot_fields and /app_fields endpoints for modular configuration. Updated board partition files to use default_4MB.csv. Refactored Modbus bridge settings and improved template processing for web UI. Removed obsolete CMakeLists.txt and IOT.htm files.

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -9,9 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = main
-include_dir = main/include
-
+    src_dir = main
+    include_dir = main/include
+    boards_dir = boards
+    
 [common]
     lib_deps_external =
         me-no-dev/AsyncTCP @ ^3.3.2
@@ -25,6 +26,8 @@ include_dir = main/include
         -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
         ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
         -D LOG_TO_SERIAL_PORT
+        -I main/include
+        -I data
 
     build_unflags =
         -std=gnu++11 
