--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -96,19 +96,41 @@
 
     lib_deps =
         ${common.lib_deps_external}
-        adafruit/Adafruit GFX Library @ ^1.12.4
-        adafruit/Adafruit SSD1306 @ ^2.5.16
+        ; adafruit/Adafruit GFX Library @ ^1.12.4
+        ; adafruit/Adafruit SSD1306 @ ^2.5.16
         adafruit/RTClib @ ^2.1.4
         simsso/ShiftRegister74HC595 @ ^1.3.1
+        bodmer/TFT_eSPI @ ^2.5.43
 
     build_flags =
         ${common.build_flags}
         -D Lilygo_Relay_6CH
-        ; -D Has_OLED
+        -D Has_TFT
         -D HasOTA
         -D HasRTC
         -D LOG_TO_SERIAL_PORT
-        
+        -D USER_SETUP_LOADED=1
+        -D ILI9341_DRIVER
+        -D TFT_MISO=12
+        -D TFT_MOSI=11
+        -D TFT_SCLK=13
+        -D TFT_CS=8
+        -D TFT_DC=46
+        -D TFT_RST=3
+        -D TFT_BL=9
+        -D TFT_BACKLIGHT_ON=1
+        -D LOAD_GLCD
+        -D LOAD_FONT2
+        -D LOAD_FONT4
+        -D LOAD_FONT6
+        -D LOAD_FONT7
+        -D LOAD_FONT8
+        -D LOAD_GFXFF
+        -D SMOOTH_FONT
+        -D USE_HSPI_PORT
+        -D SPI_FREQUENCY=40000000
+        -D SPI_READ_FREQUENCY=6000000
+
     build_unflags =
         ${common.build_unflags} 
 
