Implemented MQTT discovery

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -82,6 +82,7 @@
         ${common.build_flags}
         -D Lilygo_Relay_4CH
         -D Has_OLED
+        -D HasMQTT
         -D HasOTA
         -D LOG_TO_SERIAL_PORT
         
@@ -108,6 +109,7 @@
         -D Has_TFT
         -D HasOTA
         -D HasRTC
+        -D HasMQTT
         -D LOG_TO_SERIAL_PORT
         -D USER_SETUP_LOADED=1
         -D ILI9341_DRIVER
