Add wind speed display and refactor TFT/Tracker logic
Wind speed is now displayed on the web UI and TFT screen if an anemometer is present. The Anemometer class now uses oversampled ADC reads and filtering for more stable output. TFT display logic is refactored to update only changed fields and now uses a cache for efficient redraws. Tracker's websocket message construction is simplified and now includes wind speed. Minor config and header cleanups are included.

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -121,6 +121,7 @@
         -D TFT_RST=3
         -D TFT_BL=9
         -D TFT_BACKLIGHT_ON=1
+        -D TOUCH_CS=-1
         -D LOAD_GLCD
         -D LOAD_FONT2
         -D LOAD_FONT4
