Added support for ESP32-S3

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -48,6 +48,23 @@
     build_unflags =
         ${common.build_unflags} 
 
+[env:esp32-s3-devkitc]
+    platform = espressif32
+    board = esp32-s3-devkitc
+    framework = arduino
+    monitor_speed = 115200
+
+    lib_deps =
+        ${common.lib_deps_external}
+
+    build_flags =
+        ${common.build_flags}
+        -D ESP32_S3
+        -D HasOTA
+
+    build_unflags =
+        ${common.build_unflags} 
+
 [env:waveshare-esp32-s3-relay-6ch]
     platform = espressif32
     board = ws-esp32s3-relay
