Refactor tracker state reporting and UI data fields
Reworked the Tracker's JSON state publishing to provide separate fields for azimuth, elevation, horizontal/vertical extents and angles, and wind speed, replacing previous string-formatted values. Updated the web UI and TFT display logic to consume and present these new fields with improved formatting. Simplified MQTT state publishing to send the full JSON state. Removed unused lastMode/lastState tracking, and added actuator disable logic during initialization in main.cpp. Also enabled HasMQTT in platformio.ini for ESP32_S3 builds.

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -60,6 +60,7 @@
     build_flags =
         ${common.build_flags}
         -D ESP32_S3
+        -D HasMQTT
         -D HasOTA
 
     build_unflags =
