Migrate to IOT_LIB

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -19,10 +19,12 @@
         esp32async/ESPAsyncWebServer@^3.9.3
         bblanchon/ArduinoJson @ ^7.4.2
         ivanseidel/ArduinoThread @ ^2.1.1
+        https://github.com/ClassicDIY/IOT_Lib.git
 
     build_flags =
         -std=gnu++17
-        -D 'APP_VERSION="V3.0.0"' ; major.minor.build (major or minor will invalidate the configuration)
+        -D 'APP_VERSION="V3.0.1"' ; major.minor.build (major or minor will invalidate the configuration)
+        -D LOG_TAG=\"SkyeTracker\"
         -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
         ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
         -D LOG_TO_SERIAL_PORT
@@ -80,7 +82,6 @@
         -D Waveshare_Relay_6CH
         -D HasMQTT
         -D HasOTA
-        -D LOG_TO_SERIAL_PORT
         
     build_unflags =
         ${common.build_unflags} 
@@ -99,10 +100,10 @@
     build_flags =
         ${common.build_flags}
         -D Lilygo_Relay_4CH
+        -D Has_Display
         -D Has_OLED
         -D HasMQTT
         -D HasOTA
-        -D LOG_TO_SERIAL_PORT
         
     build_unflags =
         ${common.build_unflags} 
@@ -124,6 +125,7 @@
     build_flags =
         ${common.build_flags}
         -D Lilygo_Relay_6CH
+        -D Has_Display
         -D Has_TFT
         -D HasOTA
         -D HasRTC
