Renamed Log_tag due to idf conflict

--- a/code/ESP32/platformio.ini
+++ b/code/ESP32/platformio.ini
@@ -24,7 +24,7 @@
     build_flags =
         -std=gnu++17
         -D 'APP_VERSION="V3.0.1"' ; major.minor.build (major or minor will invalidate the configuration)
-        -D LOG_TAG=\"SkyeTracker\"
+        -D APP_LOG_TAG=\"SkyeTracker\"
         -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
         ; -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
         -D LOG_TO_SERIAL_PORT
